swagger get and get id working
