# controllers/inventory.js
@@ -1,18 +1,33 @@
 // cd Week1CSE341 to confirm correct repository 
 
 const db = require('../models');
-const Inventory = db.Inventory;
+const Inventory = db.inventory;
+const ObjectId = require('mongodb').ObjectId;
 
 exports.getInventory = (req, res) => {
-  const inventoryName = req.params.inventoryName;
-  Inventory.find({ inventoryName: inventoryName })
+  Inventory.find()
     .then((data) => {
-      if (!data) res.status(404).send({ message: 'Not found theme with name: ' + inventoryName });
-      else res.send(data[0]);
+      if (!data) res.status(404).send({ message: 'Not found!' });
+      else res.send(data);
     })
     .catch((err) => {
       res.status(500).send({
-        message: 'Error retrieving theme with themeName=' + inventoryName,
+        message: 'Error retrieving inventory!',
+        error: err
+      });
+    });
+};
+
+exports.getInventoryId = (req, res) => {
+  const id = new ObjectId(req.params.id)
+  Inventory.find({_id:id})
+    .then((data) => {
+      if (!data) res.status(404).send({ message: 'ID Not found!' });
+      else res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: 'Error retrieving inventory ID!' + err ,
         error: err
       });
     });
