# routes/inventory.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const inventoryController = require('../controllers/inventory.js');
 
-router.get('/:themeName', inventoryController.getInventory);
+router.get('/', inventoryController.getInventory);
+router.get('/:id', inventoryController.getInventoryId);
 
 module.exports = router;
